Fix so win visible

--- a/wordworld/static/style/common.css
+++ b/wordworld/static/style/common.css
@@ -43,7 +43,18 @@ body, #root {
 #popper {
     position: fixed;
     z-index: 1400;
-    inset: 12px;
+    border-color: var(--correct);
+    border-width: 3px;
+    border-radius: 4px;
+    border-style: solid;
+    padding: 1rem;
+    background-color: var(--backround-color);    
+    width: 100%;
+    max-width: var(--content-max);
+    font-size: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 2rem;
 }
 
 #error-popper {
